plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'peakspace'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    // для описание метода в свагере
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    // для валидация
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.3'
    // для подключение свагер
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    // для jwt токен
    implementation 'com.auth0:java-jwt:4.4.0'
    // для spring data jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // для веб приложение
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // для безопасность аутентификации
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // для отправки сообщение
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // ?
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    // для подключение веб сокетов
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // для подключение облачный сераер S3
    implementation 'software.amazon.awssdk:s3:2.17.81'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.12.701'
    // для подключение firebase
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
    //for migration
    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
    // jakarta servlet openSeesionFactory
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    // Cacheable
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    // Test Junit and Mockito
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'
}
tasks.named('test') {
    useJUnitPlatform()
}
